# Oculizer

./: .gitignore  ENHANCED_TOGGLE_SUMMARY.md  FALLBACK_README.md  FALLBACK_SUMMARY.md  FORCED_FALLBACKS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TOGGLE.md  INSTALL.md  LICENSE  MODE_SWITCHING_GUIDE.md  PREDICTION_OVERRIDE_MODE.md  QUICK_REFERENCE.md  README.md  SCENE_FALLBACKS.md  STARTUP_IMPROVEMENTS.md  TEST_MODE_README.md  TOGGLE_MODE_INTEGRATION.md  analyze_scenes.py  etna  generate_fallbacks.py  oculize.py  profile_fallbacks.json  pyproject.toml  requirements.txt  run_artnet.py  scene_analysis.json  setup.py  test_fallbacks.py  test_fallbacks_simple.py  test_profile_fallbacks.py  toggle.py
oculizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
profiles/: etna.json  mobile.json  rgb6.json  spreng.json  yinon.json
scenes/: RGB.json  bass_racer.json  bloop.json  blue_bass_pulse.json  blue_bass_racer.json  blue_speedracer.json  brainblaster.json  cherries.json  chill_halogen.json  chill_purple.json  electric.json  fairies.json  gloss.json  green_bass_pulse.json  green_bass_racer.json  green_speedracer.json  halogen_flicker.json  hell.json  home_ambient.json  home_laser.json  home_party.json  home_strobe.json  hot.json  hypno.json  kisskiss.json  laser_strobe.json  loveblaster.json  party.json  pink_bass_pulse.json  pink_bass_racer.json  pink_echo.json  pink_speedracer.json  pink_strobe_pulse.json  pink_wave.json  purple_flicker.json  purple_pulse.json  purple_riser.json  purple_speedracer.json  red_bass_pulse.json  red_bass_racer.json  (+18 more)
(+21 files in other folders)
