[project]
name = "oculizer"
version = "0.1.0"
description = "Music-reactive DMX / Art-Net lighting engine"
requires-python = ">=3.10"

# Core deps for the audio-reactive Art-Net path (run_artnet.py).
# numba is pinned because librosa otherwise resolves numba 0.53.1, which only
# builds on Python <3.10 and fails on 3.13.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "numba>=0.61",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# ML scene-prediction (Torch; MPS-capable on Apple Silicon).
# Install with:  uv run --extra prediction run_artnet.py
# NOTE: EfficientAT is NOT on PyPI — install it separately into the same env, e.g.
#   uv pip install "efficientat @ git+https://github.com/fschmid56/EfficientAT"
prediction = [
    "torch>=2.2",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
# USB-serial DMX output — only needed if NOT using Art-Net.
usb = [
    "pyserial>=3.5",
]

[tool.uv]
# Treat this repo as an application, not an installable package: uv provisions
# the dependencies but does not build/install `oculizer` itself (run_artnet.py
# imports it from the working directory). This also sidesteps the legacy setup.py.
package = false
